--- a/09_advance_one/Apirequest.html
+++ b/09_advance_one/Apirequest.html
@@ -14,22 +14,25 @@
     3) LOADING Downloading; responseText holds partial data.
     4) DONE; The operation is complete.
 
+
 </body>
 <script>
     const requestUrl = 'https://api.github.com/users/hiteshchoudhary'
     const xhr = new XMLHttpRequest();
     xhr.open('GET', requestUrl)
-    xhr.onreadystatechange = function(){
+    xhr.onreadystatechange = function () {
         console.log(xhr.readyState);
         if (xhr.readyState === 4) {
             const data = JSON.parse(this.responseText)
-            console.log(data.avatar_url); 
+            console.log(data);
 
         }
-    }  
+    }
+
+
+    xhr.send();
+
     
-    
-    xhr.send(); 
 
 
 
