--- a/11_funwith_js/closure.html
+++ b/11_funwith_js/closure.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>closure aur chai</title>
 </head>
+
 <body>
-    
+    <button id="orange">orange</button>
+    <button id="green">green</button>
 </body>
+
+<script>
+    //     function init() {
+    //     let name = "Mozilla";
+    //     function displayName() {
+    //         console.log(name);
+    //     }
+    //     displayName();
+    // }
+
+    // init();
+
+    // function outer() {
+    //     let username = "hitesh"
+    //     // console.log("OUTER", secret);
+    //     function inner() {
+    //         let secret = "my123"
+    //         console.log("inner", username);
+    //     }
+    //     function innerTwo() {
+    //         console.log("innerTwo", username);
+    //         // console.log(secret);
+    //     }
+    //     inner()
+    //     innerTwo()
+
+    // }
+
+    // outer();
+    // console.log("TOO OUTER", username);
+
+
+
+    // function makeFunc() {
+    //     const name = "Mozilla";
+    //     function displayName() {
+    //         console.log(name);
+    //     }
+    //     return displayName;
+    // }
+
+    // // makeFunc();
+    // const myFunc = makeFunc();
+    // myFunc();
+
+</script>
+
+<script>
+    // const body = document.body
+    // const buttons = document.querySelectorAll('button')
+    // buttons.forEach(function (button) {
+    //     button.addEventListener('click', function (e) {
+    //         if (e.target.id === 'orange') {
+    //             body.style.backgroundColor = e.target.id;
+    //         }
+    //         if (e.target.id === 'green') {
+    //             body.style.backgroundColor = e.target.id;
+    //         }
+    //     })
+    // })
+
+
+    // 2nd way-> by onclick->
+    // document.getElementById("orange").onclick = function () {
+    //     document.body.style.backgroundColor = `orange`
+    // }
+    // document.getElementById("green").onclick = function () {
+    //     document.body.style.backgroundColor = `green`
+    // }
+
+
+
+    function clickHandler(color) {
+        // document.body.style.backgroundColor = `${color}`
+
+        return function () {
+            document.body.style.backgroundColor = `${color}`
+        } 
+    }
+
+    document.getElementById('orange').onclick = clickHandler("orange")
+    document.getElementById('green').onclick = clickHandler("green")
+
+
+
+</script>
+
+
 </html>
